--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ description = "Split closed-score SATB MuseScore files into separate parts"
 requires-python = ">=3.9"
 dependencies = [
     "ms3",
+    "music21>=8.3.0",
     "pandas>=2.1.0,<2.2.0",
 ]
 
