Convert legacy tests to pytest format and add comprehensive test suite
- Migrated 5 legacy test scripts to proper pytest structure
- Added 79 comprehensive tests across 6 test modules
- Created pytest infrastructure with fixtures and configuration
- Added test categories: basic functionality, dynamics fix, lyric assignment, voice separation, edge cases, performance
- Achieved 76% code coverage across satb_splitter package
- Added test documentation and helper functions
- Removed standalone test scripts in favor of unified pytest structure

Test modules:
- tests/test_basic_functionality.py (13 tests)
- tests/test_dynamics_fix.py (8 tests)
- tests/test_lyric_assignment.py (9 tests)
- tests/test_voice_separation.py (12 tests)
- tests/test_edge_cases.py (23 tests)
- tests/test_performance.py (14 tests)

Infrastructure:
- tests/conftest.py - Shared fixtures and helpers
- tests/README.md - Comprehensive documentation
- pyproject.toml - Updated with pytest configuration and dev dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,5 +16,46 @@ satb-split = "satb_splitter.main:main"
 
 [tool.uv]
 dev-dependencies = [
-    "pytest",
+    "pytest>=7.0.0",
+    "pytest-cov>=4.0.0",
+    "pytest-xdist>=3.0.0",
+]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+addopts = [
+    "--verbose",
+    "--tb=short",
+    "--strict-markers",
+    "--disable-warnings",
+]
+markers = [
+    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+    "integration: marks tests as integration tests",
+    "unit: marks tests as unit tests",
+    "regression: marks tests as regression tests",
+]
+filterwarnings = [
+    "ignore::DeprecationWarning",
+    "ignore::PendingDeprecationWarning",
+]
+
+[tool.coverage.run]
+source = ["satb_splitter"]
+omit = [
+    "tests/*",
+    "setup.py",
+    "satb_splitter/__main__.py",
+]
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "def __repr__",
+    "raise AssertionError",
+    "raise NotImplementedError",
+    "if __name__ == .__main__.:",
 ]
